--- a/web/docker-compose.yml
+++ b/web/docker-compose.yml
@@ -1,16 +1,22 @@
 version: '3'
+volumes:
+  postgres_data: {}
 services:
-  web:
-    build: .
-    command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
-    working_dir: /app
-    ports:
-      - "3000:3000"
-    volumes:
-    - .:/app
+  app:
+    build:
+      context: .
+      dockerfile: ./docker/app/Dockerfile
     depends_on:
       - db
   db:
     image: postgres
     volumes:
-      - ./tmp/db:/var/lib/postgresql/data
+      - postgres_data:/var/lib/postgresql/data
+  web:
+    build:
+      context: .
+      dockerfile: ./docker/web/Dockerfile
+    depends_on:
+      - app
+    ports:
+      - 80:80
