--- a/web/docker-compose.yml
+++ b/web/docker-compose.yml
@@ -1,6 +1,7 @@
-version: '3'
+version: '3.1'
 volumes:
   postgres_data: {}
+  bundle_cache: {}
 services:
   app:
     build:
@@ -8,6 +9,9 @@ services:
       dockerfile: ./docker/app/Dockerfile
     depends_on:
       - db
+    volumes:
+      - bundle_cache:/bundle
+      - .:/web
   db:
     image: postgres
     volumes:
