Refactor in bot EME to work in loop

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,8 @@ ml/__pycache__
 web/tmp/pids
 web/tmp/cache
 .~lock*
+*.jpeg~
+*.png~
 
 
 # TODO Comment out this rule if you are OK with secrets being uploaded to the repo
