Create feature column to events with jsonb

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ web/tmp/cache
 *.kra
 .pem
 usr/
+web/log/development.log
 
 
 # TODO Comment out this rule if you are OK with secrets being uploaded to the repo
