--- a/web/config/database.yml
+++ b/web/config/database.yml
@@ -11,8 +11,13 @@ default: &default
   timeout: 5000
 
 development:
-  <<: *default
-  database: db/development.sqlite3
+  adapter: postgresql
+  encoding: unicode
+  database: development
+  pool: 5
+  timeout: 5000
+  user: jon
+  password: <%= ENV['DEVELOPMENT_DB_PASS'] %>
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
