--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ web/tmp/cache
 .pem
 usr/
 web/log/development.log
+web/storage
 
 
 # TODO Comment out this rule if you are OK with secrets being uploaded to the repo
