--- a/web/Gemfile
+++ b/web/Gemfile
@@ -17,6 +17,8 @@ gem 'uglifier', '>= 1.3.0'
 # See https://github.com/rails/execjs#readme for more supported runtimes
 # gem 'mini_racer', platforms: :ruby
 
+gem "jsonb_accessor", "~> 1.0.0"
+
 # Materialize
 gem 'materialize-sass', '~> 1.0.0'
 
