--- a/web/Gemfile
+++ b/web/Gemfile
@@ -27,6 +27,9 @@ gem 'devise'
 gem 'omniauth-google-oauth2'
 
 
+gem 'geocoder'
+
+
 # Webpacker
 gem 'webpacker', git: 'https://github.com/rails/webpacker.git'
 
@@ -66,6 +69,7 @@ group :development do
   # Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
   gem 'spring'
   gem 'spring-watcher-listen', '~> 2.0.0'
+  gem 'awesome_print', require: 'ap'
 end
 
 group :test do
