--- a/web/package.json
+++ b/web/package.json
@@ -7,6 +7,7 @@
     "botkit": "^0.7.0",
     "lit-html": "^0.14.0",
     "material-components-web": "^0.43.0",
+    "query-string": "^6.4.2",
     "stimulus": "^1.1.1"
   },
   "devDependencies": {
