Adjust in geocoder of city and neighborhood

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ structure.sql
 ml/api/__pycache__/
 web/log/
 web/log/development.log
+web/.rake_tasks~
 
 # TODO Comment out this rule if you are OK with secrets being uploaded to the repo
 config/initializers/secret_token.rb
