--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ ml/api/__pycache__/
 web/log/
 web/log/development.log
 web/.rake_tasks~
+web/vendor/cache/
 
 # TODO Comment out this rule if you are OK with secrets being uploaded to the repo
 config/initializers/secret_token.rb
