--- a/web/Gemfile
+++ b/web/Gemfile
@@ -53,6 +53,7 @@ gem 'jbuilder', '~> 2.5'
 # Use Capistrano for deployment
 # gem 'capistrano-rails', group: :development
 
+gem 'searchkick'
 
 gem 'httparty'
 
