--- a/web/Gemfile
+++ b/web/Gemfile
@@ -62,6 +62,8 @@ gem 'bootsnap', '>= 1.1.0', require: false
 
 gem 'mini_magick'
 
+gem 'whenever', require: false
+
 group :production do
   gem 'aws-sdk-s3'
 end
