--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
       - db
       - api
       - search
+      - bot
+      - scrapy
     volumes:
       - scrapy_shared:/var/www/scrapy/data
       - bundle_cache:/bundle
@@ -28,6 +30,7 @@ services:
     links:
       - api
       - search
+    restart: always
   db:
     image: postgres
     volumes:
@@ -38,6 +41,7 @@ services:
       POSTGRES_DB: db
     ports:
       - 5432:5432
+    restart: always
   web:
     build:
       context: ./web
@@ -46,6 +50,7 @@ services:
       - app
     ports:
       - 80:80
+    restart: always
   api:
     build:
       context: ./ml
@@ -62,6 +67,9 @@ services:
         - "3030:3030"
     volumes:
         - /var/www/bot/data
+    environment:
+      MONGO_URI: mongodb://jon:password@mongo:27017
+    restart: always
   search:
     build:
       context: ./search
@@ -72,6 +80,7 @@ services:
         - "9200:9200"
     volumes:
         - /var/www/search/data
+    restart: always
   scrapy:
     build:
       context: ./scrapy
@@ -82,12 +91,20 @@ services:
     depends_on:
       - splash
     volumes:
-        - scrapy_shared:/var/www/scrapy/data
+      - scrapy_shared:/var/www/scrapy/data
     ports:
       - "7654:7654"
+    restart: always
   splash:
     image: scrapinghub/splash
     ports:
       - "8050:8050"
       - "5023:5023"
+    restart: always
+  mongo:
+    image: mongo:4.1
+    restart: always
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: jon
+      MONGO_INITDB_ROOT_PASSWORD: password
 
