--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       - bundle_cache:/bundle
       - ./web:/var/www/alegreme
     environment:
-      RAILS_SERVE_STATIC_FILES: 'true'
+      RAILS_SERVE_STATIC_FILES: 'false'
       PGHOST: db
       PGUSER: postgres
       AWS_ACCESS_KEY_ID: REMOVED
