--- a/web/docker/web/nginx.conf
+++ b/web/docker/web/nginx.conf
@@ -20,7 +20,7 @@ server {
    }
 
    # serve static (compiled) assets directly if they exist (for rails production)
-   location ~ ^/(assets|images|javascripts|stylesheets|swfs|system)/   {
+   location ~ ^/(assets|packs/js|packs|js|images|javascripts|stylesheets|swfs|system)/   {
       try_files $uri @rails;
       access_log off;
       gzip_static on;
