--- a/web/docker/web/nginx.conf
+++ b/web/docker/web/nginx.conf
@@ -3,7 +3,7 @@ upstream rails_app {
 }
 server {
    # define your domain
-   server_name www.example.com;
+   server_name www.alegreme.com;
    # define the public application root
    root   $RAILS_ROOT/public;
    index  index.html;
@@ -20,7 +20,7 @@ server {
    }
 
    # serve static (compiled) assets directly if they exist (for rails production)
-   location ~ ^/(assets|packs\/js|packs|js|images|javascripts|stylesheets|swfs|system)/   {
+   location ~ ^/(assets|images|javascripts|stylesheets|swfs|system|packs)/   {
       try_files $uri @rails;
       access_log off;
       gzip_static on;
