--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     volumes:
       - scrapy_shared:/var/www/scrapy/data
       - bundle_cache:/bundle
-      - ./web:/var/www/alegreme
+      - /var/www/alegreme/storage
     environment:
       RAILS_SERVE_STATIC_FILES: 'false'
       PGHOST: db
