Add confs of timezone in docker

--- a/scrapy/Dockerfile
+++ b/scrapy/Dockerfile
@@ -1,5 +1,8 @@
 FROM python:3
 
+RUN echo "America/Sao_Paulo" > /etc/timezone
+RUN dpkg-reconfigure -f noninteractive tzdata
+
 ENV SCRAPY_ROOT /var/www/scrapy
 RUN mkdir -p $SCRAPY_ROOT
 
