--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,8 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: docker
       POSTGRES_DB: db
+      TZ: 'America/Sao_Paulo'
+      PGTZ: 'America/Sao_Paulo'
     ports:
       - 5432:5432
     restart: always
