--- a/scrapy/Dockerfile
+++ b/scrapy/Dockerfile
@@ -4,8 +4,8 @@ ENV TZ "America/Sao_Paulo"
 
 ENV SCRAPY_ROOT /var/www/scrapy
 RUN mkdir -p $SCRAPY_ROOT
-RUN mkdir -p "${SCRAPY_ROOT}/scraped"
-RUN mkdir -p "${SCRAPY_ROOT}/classified"
+RUN mkdir -p "${SCRAPY_ROOT}/data/scraped"
+RUN mkdir -p "${SCRAPY_ROOT}/data/classified"
 
 WORKDIR $SCRAPY_ROOT
 
