--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     volumes:
       - scrapy_shared:/var/www/scrapy/data
       - bundle_cache:/bundle
-      - /var/www/alegreme/storage
+      - ./storage:/var/www/alegreme/storage
     environment:
       RAILS_SERVE_STATIC_FILES: 'false'
       PGHOST: db
@@ -60,17 +60,17 @@ services:
       context: ./ml
       dockerfile: ./Dockerfile
     ports:
-        - "5000:5000"
+      - "5000:5000"
     volumes:
-        - /var/www/api/data
+      - api_data:/var/www/api/data
   bot:
     build:
       context: ./bot
       dockerfile: ./Dockerfile
     ports:
-        - "3030:3030"
+      - "3030:3030"
     volumes:
-        - /var/www/bot/data
+      - bot_data:/var/www/bot/data
     environment:
       MONGO_URI: mongodb://jon:password@mongo:27017
       PRIVATE_IP: '172.26.14.59'
@@ -86,9 +86,9 @@ services:
     environment:
       discovery.type: single-node
     ports:
-        - "9200:9200"
+      - "9200:9200"
     volumes:
-        - /var/www/search/data
+      - search_data:/var/www/search/data
     restart: always
   scrapy:
     build:
@@ -103,7 +103,7 @@ services:
       - splash
     volumes:
       - scrapy_shared:/var/www/scrapy/data
-      - /var/www/scrapy/scrapydo
+      - scrapydo_data:/var/www/scrapy/scrapydo
     ports:
       - "7654:7654"
     restart: always
@@ -119,4 +119,6 @@ services:
     environment:
       MONGO_INITDB_ROOT_USERNAME: jon
       MONGO_INITDB_ROOT_PASSWORD: password
+    volumes:
+      - mongo_data:/data/db
 
