Shared volume scrapy add to api 2

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -71,7 +71,7 @@ services:
       - api_data:/var/www/api/data
       - scrapy_shared:/var/www/scrapy/data
     environment:
-      - IS_DOCKER: 'true'
+      IS_DOCKER: 'true'
   bot:
     build:
       context: ./bot
