Add bug tracking and adjust bin of services to run local

--- a/web/Gemfile
+++ b/web/Gemfile
@@ -68,6 +68,7 @@ gem 'whenever', require: false
 
 group :production do
   gem 'aws-sdk-s3'
+  gem 'sentry-raven'
 end
 
 group :development, :test do
