Adjust ml files to work local

--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,7 @@ web/log/
 web/log/development.log
 web/.rake_tasks~
 web/vendor/cache/
+web/.rake_tasks~
 
 # TODO Comment out this rule if you are OK with secrets being uploaded to the repo
 config/initializers/secret_token.rb
