--- a/web/Gemfile
+++ b/web/Gemfile
@@ -39,7 +39,7 @@ gem 'webpacker', git: 'https://github.com/rails/webpacker.git'
 # Use CoffeeScript for .coffee assets and views
 gem 'coffee-rails', '~> 4.2'
 # Turbolinks makes navigating your web application faster. Read more: https://github.com/turbolinks/turbolinks
-gem 'turbolinks', '~> 5'
+# gem 'turbolinks', '~> 5'
 # Build JSON APIs with ease. Read more: https://github.com/rails/jbuilder
 gem 'jbuilder', '~> 2.5'
 # Use Redis adapter to run Action Cable in production
@@ -65,6 +65,8 @@ gem 'mini_magick'
 gem 'rack-cors'
 
 gem 'whenever', require: false
+
+# gem 'serviceworker-rails'
 
 group :production do
   gem 'aws-sdk-s3'
