--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,7 +62,16 @@ services:
       - app
     ports:
       - 80:80
+      - 443:443
+    volumes:
+      - ./data/certbot/conf:/etc/letsencrypt
+      - ./data/certbot/www:/var/www/certbot
     restart: always
+  certbot:
+    image: certbot/certbot
+    volumes:
+      - ./data/certbot/conf:/etc/letsencrypt
+      - ./data/certbot/www:/var/www/certbot
   api:
     build:
       context: ./ml
