--- a/web/docker/web/nginx.conf
+++ b/web/docker/web/nginx.conf
@@ -1,26 +1,31 @@
 upstream rails_app {
    server app:3000;
 }
+upstream bot_app {
+   server bot:3030;
+}
 server {
-   # define your domain
-   server_name www.alegreme.com;
-   # define the public application root
-   root   $RAILS_ROOT/public;
-   index  index.html;
-   # define where Nginx should write its logs
+   listen 80;
+   server_name alegreme.com www.alegreme.com;
+
    access_log $RAILS_ROOT/log/nginx.access.log;
    error_log $RAILS_ROOT/log/nginx.error.log;
 
-   # deny requests for files that should never be accessed
-   location ~ /\. {
-      deny all;
+   location ^~ /.well-known {
+      root /var/www/certbot;
+      allow all;
    }
-   location ~* ^.+\.(rb|log)$ {
-      deny all;
+  
+   location = /.well-known/acme-challenge/ {
+      root /var/www/certbot;
    }
 
-   # serve static (compiled) assets directly if they exist (for rails production)
+   location /.well-known/acme-challenge/ {
+      root /var/www/certbot;
+   }
+
    location ~ ^/(assets|images|javascripts|stylesheets|swfs|system|packs)/   {
+      root   $RAILS_ROOT/public;
       try_files $uri @rails;
       access_log off;
       gzip_static on;
@@ -33,10 +38,11 @@ server {
       break;
    }
 
-   # send non-static file requests to the app server
+   
    location / {
-      try_files $uri @rails;
+      return 301 https://www.alegreme.com$request_uri;
    }
+
    location @rails {
       proxy_set_header  X-Real-IP  $remote_addr;
       proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -44,4 +50,39 @@ server {
       proxy_redirect off;
       proxy_pass http://rails_app;
    }
+}
+server {
+    listen 443 ssl;
+    server_name alegreme.com www.alegreme.com;
+    server_tokens off;
+
+   access_log $RAILS_ROOT/log/nginx.access.log;
+   error_log $RAILS_ROOT/log/nginx.error.log;
+
+    ssl_certificate /etc/letsencrypt/live/alegreme.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/alegreme.com/privkey.pem;
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+
+
+   location /bot/ {
+      rewrite ^/bot/?(.*)$ /$1 break;
+      proxy_set_header X-Real-IP  $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto https;
+      proxy_set_header Host $http_host;
+      proxy_redirect off;
+      proxy_pass http://bot_app;
+   }
+
+  
+    location / {
+      proxy_set_header X-Real-IP  $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto https;
+      proxy_set_header Host $http_host;
+      proxy_redirect off;
+      proxy_pass http://rails_app;
+   }
+
 }
