--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -95,7 +95,7 @@ services:
       MONGO_URI: mongodb://jon:password@mongo:27017
       PRIVATE_IP: '172.26.14.59'
       PUBLIC_IP: '3.209.95.87'
-      WEB_DOMAIN: 'http://www.alegreme.com'
+      WEB_DOMAIN: 'https://www.alegreme.com'
     restart: always
     depends_on:
       - mongo
