Adjust in style for feed

--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,8 @@ web/log/development.log
 web/.rake_tasks~
 web/vendor/cache/
 web/.rake_tasks~
+web/public/assets/.sprockets*.json
+web/public/assets/application-*
 
 # TODO Comment out this rule if you are OK with secrets being uploaded to the repo
 config/initializers/secret_token.rb
