--- a/web/docker/web/nginx.conf
+++ b/web/docker/web/nginx.conf
@@ -43,7 +43,7 @@ server {
     }
 }
 server {
-    listen 443 ssl;
+    listen 443 ssl http2 default_server;
     server_name alegreme.com www.alegreme.com;
     server_tokens off;
     access_log $RAILS_ROOT/log/nginx.access.log;
