--- a/web/package.json
+++ b/web/package.json
@@ -5,6 +5,7 @@
     "@material/card": "^0.43.0",
     "@rails/webpacker": "https://github.com/rails/webpacker",
     "botkit": "^0.7.0",
+    "default-passive-events": "^1.0.10",
     "lit-html": "^0.14.0",
     "material-components-web": "^0.43.0",
     "query-string": "^6.4.2",
