--- a/bot/eme/package.json
+++ b/bot/eme/package.json
@@ -4,7 +4,8 @@
   "description": "A starter kit for building a custom bot for your website with Botkit Studio",
   "main": "bot.js",
   "scripts": {
-    "start": "node bot.js"
+    "start": "node bot.js",
+    "sass": "sass --update sass/:public/css/"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
