--- a/web/Gemfile
+++ b/web/Gemfile
@@ -96,7 +96,7 @@ group :development do
   gem 'spring'
   gem 'spring-watcher-listen', '~> 2.0.0'
   gem 'awesome_print', require: 'ap'
-  # gem 'meta_request'
+  gem 'meta_request'
 end
 
 group :test do
