Add Turbolinks to work with workbox

--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,8 @@ web/.rake_tasks~
 web/public/assets/.sprockets*.json
 web/public/assets/application-*
 web/public/uploads/
+web/public/assets/@stimulus
+web/public/assets/logo-*
 
 # TODO Comment out this rule if you are OK with secrets being uploaded to the repo
 config/initializers/secret_token.rb
