Adjust in javascript to chatbot work with turbolinks

--- a/web/Gemfile
+++ b/web/Gemfile
@@ -31,6 +31,7 @@ gem 'lupa', git: 'https://github.com/edelpero/lupa.git'
 
 gem 'geocoder'
 
+gem 'gon'
 
 # Webpacker
 gem 'webpacker', git: 'https://github.com/rails/webpacker.git'
