Use bot in application withput iframe

--- a/bot/eme/.env
+++ b/bot/eme/.env
@@ -10,3 +10,4 @@ PORT=3030
 # Specify a MONGO_URI to enable message history
 # mLab.com has a free tier which is great for getting started
 MONGO_URI=
+WEB_DOMAIN=http://localhost:3000
