CReate hero component

--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,8 @@ web/public/assets/application-*
 web/public/uploads/
 web/public/assets/@stimulus
 web/public/assets/logo-*
+web/public/assets/bot/client-*
+web/public/assets/image-*
 
 # TODO Comment out this rule if you are OK with secrets being uploaded to the repo
 config/initializers/secret_token.rb
