--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,5 +17,8 @@
         "liquid",
         "ruby",
         "erb"
-]
+],
+"python.linting.pylintEnabled": true,
+"python.linting.enabled": true,
+"python.pythonPath": "/home/jon/anaconda3/envs/alegreme/bin/python"
 }
