Add kinds and tags columns

--- a/web/config/database.yml
+++ b/web/config/database.yml
@@ -28,6 +28,6 @@ production:
   user: postgres
   password: docker
 
-test:
-  <<: *default
-  database: db/test.sqlite3
+# test:
+#   <<: *default
+#   database: db/test.sqlite3
