--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,7 @@ web/storage
 structure.sql
 ml/api/__pycache__/
 scrapy/alegreme/__pycache__/
+scrapy/alegreme/spiders/__pycache__/
 web/log/
 web/log/development.log
 web/.rake_tasks~
