Add tags to classifier page

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,5 +20,37 @@
 ],
 "python.linting.pylintEnabled": true,
 "python.linting.enabled": true,
-"python.pythonPath": "/home/jon/anaconda3/envs/alegreme/bin/python"
+"python.pythonPath": "/home/jon/anaconda3/envs/alegreme/bin/python",
+"cSpell.enabledLanguageIds": [
+    "asciidoc",
+    "c",
+    "cpp",
+    "csharp",
+    "css",
+    "git-commit",
+    "go",
+    "handlebars",
+    "html",
+    "jade",
+    "java",
+    "javascript",
+    "javascriptreact",
+    "json",
+    "jsonc",
+    "latex",
+    "less",
+    "markdown",
+    "php",
+    "plaintext",
+    "pug",
+    "restructuredtext",
+    "rust",
+    "scala",
+    "scss",
+    "text",
+    "typescript",
+    "typescriptreact",
+    "yaml",
+    "yml"
+]
 }
