--- a/web/test/fixtures/events.yml
+++ b/web/test/fixtures/events.yml
@@ -1,11 +1,265 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+#today:
+#  ocurrences:
+#    {
+#      "dates": ['2019-06-24 21:00:00']
+#    }
+#  theme:
+#    name:
+#    score:
+#    outlier:
+#  personas:
+#    {
+#      "outlier": false,
+#      "primary":
+#        {
+#          "name": 'hipster',
+#          "score": '0.996777',
+#        },
+#      "secondary":
+#        {
+#          "name": 'zeen',
+#          "score": '0.003223',
+#        }
+#    }
+#  categories:
+#    {
+#      "outlier": false,
+#      "primary":
+#        {
+#          "name": 'festa',
+#          "score": '0.999241',
+#        },
+#      "secondary":
+#        {
+#          "name": 'meetup',
+#          "score": '0.000759',
+#        }
+#    }
+#  tags:
+#    things: []
+#    features: []
+#    activities: []
+#  geographic:
+#    cep: 90040-480
+#    city: Porto Alegre
+#    latlon:
+#    address: Avenida João Pessoa, 90040-480 Porto Alegre
+#    neighborhood:
+#  details:
+#    name: Serenata Iluminada na Virada Sustentável
+#    prices: []
+#    source_url: https://www.facebook.com/events/373799036764008
+#    description: '<span>A Serenata Iluminada é um movimento de pessoas que amam Porto
+#      Alegre e querem o melhor para a nossa cidade! Por isso, em abril estaremos mais
+#      uma vez juntos com a Virada Sustentável Porto Alegre 2019 para realizar uma'
+#  entries:
+#    {
+#      "liked_by": [],
+#      "saved_by": [],
+#      "viewed_by": [],
+#      "disliked_by": [],
+#      "total_likes": 0,
+#      "total_saves": 0,
+#      "total_views": 0,
+#      "total_dislikes": 0,
+#    }
 
-one:
-  name: MyString
-  description: MyText
-  url: MyString
+#tomorrow:
+#  ocurrences:
+#    {
+#      "dates": ['2019-06-25 18:00:00']
+#    }
+#  theme:
+#    name:
+#    score:
+#    outlier:
+#  personas:
+#    {
+#      "outlier": false,
+#      "primary":
+#        {
+#          "name": 'geek',
+#          "score": '0.996777',
+#        },
+#      "secondary":
+#        {
+#          "name": 'zeen',
+#          "score": '0.003223',
+#        }
+#    }
+#  categories:
+#    {
+#      "outlier": false,
+#      "primary":
+#        {
+#          "name": 'cinema',
+#          "score": '0.999241',
+#        },
+#      "secondary":
+#        {
+#          "name": 'brecho',
+#          "score": '0.000759',
+#        }
+#    }
+#  tags:
+#    things: []
+#    features: []
+#    activities: []
+#  geographic:
+#    cep: 90040-480
+#    city: Porto Alegre
+#    latlon:
+#    address: Avenida João Pessoa, 90040-480 Porto Alegre
+#    neighborhood:
+#  details:
+#    name: Serenata Iluminada na Virada Sustentável
+#    prices: []
+#    source_url: https://www.facebook.com/events/373799036764008
+#    description: '<span>A Serenata Iluminada é um movimento de pessoas que amam Porto
+#      Alegre e querem o melhor para a nossa cidade! Por isso, em abril estaremos mais
+#      uma vez juntos com a Virada Sustentável Porto Alegre 2019 para realizar uma'
+#  entries:
+#    {
+#      "liked_by": [],
+#      "saved_by": [],
+#      "viewed_by": [],
+#      "disliked_by": [],
+#      "total_likes": 0,
+#      "total_saves": 0,
+#      "total_views": 0,
+#      "total_dislikes": 0,
+#    }
 
-two:
-  name: MyString
-  description: MyText
-  url: MyString
+
+#user_persona_one:
+#  ocurrences:
+#    {
+#      "dates": ['2019-06-26 18:00:00']
+#    }
+#  theme:
+#    name:
+#    score:
+#    outlier:
+#  personas:
+#    {
+#      "outlier": false,
+#      "primary":
+#        {
+#          "name": 'hipster',
+#          "score": '0.996777',
+#        },
+#      "secondary":
+#        {
+#          "name": 'zeen',
+#          "score": '0.003223',
+#        }
+#    }
+#  categories:
+#    {
+#      "outlier": false,
+#      "primary":
+#        {
+#          "name": 'teatro',
+#          "score": '0.999241',
+#        },
+#      "secondary":
+#        {
+#          "name": 'feira',
+#          "score": '0.000759',
+#        }
+#    }
+#  tags:
+#    things: []
+#    features: []
+#    activities: []
+#  geographic:
+#    cep: 90040-480
+#    city: Porto Alegre
+#    latlon:
+#    address: Avenida João Pessoa, 90040-480 Porto Alegre
+#    neighborhood:
+#  details:
+#    name: Serenata Iluminada na Virada Sustentável
+#    prices: []
+#    source_url: https://www.facebook.com/events/373799036764008
+#    description: '<span>A Serenata Iluminada é um movimento de pessoas que amam Porto
+#      Alegre e querem o melhor para a nossa cidade! Por isso, em abril estaremos mais
+#      uma vez juntos com a Virada Sustentável Porto Alegre 2019 para realizar uma'
+#  entries:
+#    {
+#      "liked_by": [],
+#      "saved_by": [],
+#      "viewed_by": [],
+#      "disliked_by": [],
+#      "total_likes": 0,
+#      "total_saves": 0,
+#      "total_views": 0,
+#      "total_dislikes": 0,
+#    }
+
+
+#user_persona_two:
+#  ocurrences:
+#    {
+#      "dates": ['2019-06-26 18:00:00']
+#    }
+#  theme:
+#    name:
+#    score:
+#    outlier:
+#  personas:
+#    {
+#      "outlier": false,
+#      "primary":
+#        {
+#          "name": 'hipster',
+#          "score": '0.996777',
+#        },
+#      "secondary":
+#        {
+#          "name": 'zeen',
+#          "score": '0.003223',
+#        }
+#    }
+#  categories:
+#    {
+#      "outlier": false,
+#      "primary":
+#        {
+#          "name": 'teatro',
+#          "score": '0.999241',
+#        },
+#      "secondary":
+#        {
+#          "name": 'feira',
+#          "score": '0.000759',
+#        }
+#    }
+#  tags:
+#    things: []
+#    features: []
+#    activities: []
+#  geographic:
+#    cep: 90040-480
+#    city: Porto Alegre
+#    latlon:
+#    address: Avenida João Pessoa, 90040-480 Porto Alegre
+#    neighborhood:
+#  details:
+#    name: Serenata Iluminada na Virada Sustentável
+#    prices: []
+#    source_url: https://www.facebook.com/events/373799036764008
+#    description: '<span>A Serenata Iluminada é um movimento de pessoas que amam Porto
+#      Alegre e querem o melhor para a nossa cidade! Por isso, em abril estaremos mais
+#      uma vez juntos com a Virada Sustentável Porto Alegre 2019 para realizar uma'
+#  entries:
+#    {
+#      "liked_by": [],
+#      "saved_by": [],
+#      "viewed_by": [],
+#      "disliked_by": [],
+#      "total_likes": 0,
+#      "total_saves": 0,
+#      "total_views": 0,
+#      "total_dislikes": 0,
+#    }
