--- a/web/Gemfile
+++ b/web/Gemfile
@@ -15,7 +15,7 @@ gem 'sass-rails', '~> 5.0'
 # Use Uglifier as compressor for JavaScript assets
 gem 'uglifier', '>= 1.3.0'
 # See https://github.com/rails/execjs#readme for more supported runtimes
-# gem 'mini_racer', platforms: :ruby
+gem 'mini_racer', platforms: :ruby
 
 gem "jsonb_accessor", "~> 1.0.0"
 
@@ -102,7 +102,7 @@ group :development do
   gem 'awesome_print', require: 'ap'
   gem 'meta_request'
   gem 'niceql'
-  gem 'bullet'
+  # gem 'bullet'
 end
 
 group :test do
@@ -111,6 +111,9 @@ group :test do
   gem 'selenium-webdriver'
   # Easy installation and use of chromedriver to run system tests with Chrome
   gem 'chromedriver-helper'
+  gem 'factory_bot_rails'
+  gem 'timecop'
+  gem 'database_cleaner'
 end
 
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
