--- a/web/config/database.yml
+++ b/web/config/database.yml
@@ -16,8 +16,8 @@ development:
   database: development
   pool: 5
   timeout: 5000
-  user: <%= ENV['RAILS_ROOT']  ? 'postgres' : 'jon' %> 
-  password: <%= ENV['RAILS_ROOT'] ? 'docker' : nil %> 
+  user: <%= ENV['RAILS_ROOT']  ? 'postgres': 'jon' %>
+  password: <%= ENV['RAILS_ROOT'] ? 'docker': nil %>
 
 production:
   adapter: postgresql
@@ -28,6 +28,11 @@ production:
   user: postgres
   password: docker
 
-# test:
-#   <<: *default
-#   database: db/test.sqlite3
+test:
+  adapter: postgresql
+  encoding: unicode
+  database: test
+  pool: 5
+  timeout: 5000
+  user: <%= ENV['RAILS_ROOT']  ? 'postgres': 'jon' %>
+  password: <%= ENV['RAILS_ROOT'] ? 'docker': nil %>
