--- a/web/Gemfile
+++ b/web/Gemfile
@@ -33,6 +33,9 @@ gem 'geocoder'
 
 gem 'gon'
 
+gem 'acts_as_follower', github: 'tcocca/acts_as_follower', branch: 'master'
+
+
 # Webpacker
 gem 'webpacker', git: 'https://github.com/rails/webpacker.git'
 
