--- a/web/Gemfile
+++ b/web/Gemfile
@@ -22,6 +22,9 @@ gem "jsonb_accessor", "~> 1.0.0"
 # Materialize
 gem 'materialize-sass', '~> 1.0.0'
 
+# Sidekiq
+gem 'sidekiq'
+
 # Devise
 gem 'devise'
 gem 'omniauth-google-oauth2'
@@ -47,7 +50,7 @@ gem 'coffee-rails', '~> 4.2'
 # Build JSON APIs with ease. Read more: https://github.com/rails/jbuilder
 gem 'jbuilder', '~> 2.5'
 # Use Redis adapter to run Action Cable in production
-# gem 'redis', '~> 4.0'
+gem 'redis-rails'
 # Use ActiveModel has_secure_password
 # gem 'bcrypt', '~> 3.1.7'
 
