--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,8 @@
     "morphdom": "^2.5.4",
     "postal": "^2.0.5",
     "query-string": "^6.4.2",
+    "rellax": "^1.10.0",
+    "scrollbooster": "^1.1.0",
     "stimulus": "^1.1.1",
     "turbolinks": "^5.2.0"
   },
