--- a/web/package.json
+++ b/web/package.json
@@ -7,6 +7,7 @@
     "botkit": "^0.7.0",
     "default-passive-events": "^1.0.10",
     "flipping": "^1.1.0",
+    "lazysizes": "^5.1.0",
     "lit-html": "^0.14.0",
     "material-components-web": "^0.43.0",
     "mobile-detect": "^1.4.3",
